--- a/index-START.html
+++ b/index-START.html
@@ -59,7 +59,12 @@
 
 <script>
   window.addEventListener('keydown', function (e)  {
-      console.log(e.keyCode);
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+      if(!audio) return; // stop the function from running all together
+      audio.currentTime = 0; // rewind to start
+      audio.play();
+      console.log(key);
   });
 </script>
 
