Add remove transition function

--- a/index-START.html
+++ b/index-START.html
@@ -64,8 +64,13 @@
       if(!audio) return; // stop the function from running all together
       audio.currentTime = 0; // rewind to start
       audio.play();
-      console.log(key);
+      key.classList.add('playing');
   });
+  function removeTransition (e) {
+    console.log(e);
+  }
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
 </script>
 
 
